--- a/index.html
+++ b/index.html
@@ -4,10 +4,29 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style/style.scss" />
+    <link rel="icon" href="https://chinsun9.github.io/img/favicon.ico?" />
     <title>Home</title>
   </head>
   <body>
-    <h1>Hello Parcel</h1>
+    <nav>
+      <ul class="nav-list">
+        <li><a href="./index.html" class="nav-links">Home</a></li>
+        <li><a href="./about.html" class="nav-links">About</a></li>
+        <li><a href="./contact.html" class="nav-links">Contact</a></li>
+      </ul>
+    </nav>
+
+    <main data-router-wrapper>
+      <section data-router-view="home" class="home">
+        <div class="home-content">
+          <div class="home-presentation">
+            <h1>Smooth Page Transition</h1>
+            <p>Beautiful transition between html pages</p>
+          </div>
+          <img src="./images/001-cake.svg" alt="home" />
+        </div>
+      </section>
+    </main>
 
     <script src="./js/index.js"></script>
   </body>
