--- a/about.html
+++ b/about.html
@@ -13,6 +13,11 @@
           <div class="about-presentation">
             <h1>About Page</h1>
             <p>Learn more about page transition</p>
+            <p>
+              <a href="https://github.com/chinsun9/smooth-page-transitions">
+                source code here</a
+              >
+            </p>
           </div>
           <img src="./images/002-cookies.svg" alt="about" />
         </div>
