--- a/about.html
+++ b/about.html
@@ -7,6 +7,14 @@
     <title>About</title>
   </head>
   <body>
+    <nav>
+      <ul class="nav-list">
+        <li><a href="./index.html" class="nav-links">Home</a></li>
+        <li><a href="./about.html" class="nav-links">About</a></li>
+        <li><a href="./contact.html" class="nav-links">Contact</a></li>
+      </ul>
+    </nav>
+
     <main data-router-wrapper>
       <section data-router-view="about" class="about">
         <div class="about-content">
