--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style/style.scss" />
-    <link rel="icon" href="https://chinsun9.github.io/img/favicon.ico?" />
+    <link rel="icon" href="https://chinsun9.github.io/img/favicon.svg?" />
     <title>Home</title>
   </head>
   <body>
